openturns/1.17/_sources/auto_reliability_sensitivity/design_of_experiments/plot_composite_experiment.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_reliability_sensitivity/design_of_experiments/plot_composite_experiment.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py:


Create a composite design of experiments
========================================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

In this example we create a deterministic design experiment with the `Composite` class.

.. GENERATED FROM PYTHON SOURCE LINES 11-17

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Define position, scale

.. GENERATED FROM PYTHON SOURCE LINES 19-22

.. code-block:: default

    center = [0.5, 1.5]
    levels = [4, 8, 16]








.. GENERATED FROM PYTHON SOURCE LINES 23-24

Create the design

.. GENERATED FROM PYTHON SOURCE LINES 24-27

.. code-block:: default

    experiment = ot.Composite(center, levels)
    sample = experiment.generate()








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Plot the design

.. GENERATED FROM PYTHON SOURCE LINES 29-34

.. code-block:: default

    graph = ot.Graph("Composite design", "x1", "x2", True, "")
    cloud = ot.Cloud(sample, "blue", "fsquare", "")
    graph.add(cloud)
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_composite_experiment_001.png
    :alt: Composite design
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.056 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_composite_experiment.py <plot_composite_experiment.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_composite_experiment.ipynb <plot_composite_experiment.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
